--- a/css/style.css
+++ b/css/style.css
@@ -10842,24 +10842,36 @@ body {
   height: 100vh;
 }
 
+/* -----------------------BARRE DE NAVIGATION------------------------ */
+.navbar-brand {
+  margin-left: 1em;
+}
+
+.navbar-toggler {
+  margin-right: 1em;
+}
+
+.navbar-nav > li {
+  margin-left: 1em;
+}
+
+/* -----------------------TEXTES EN GRAS------------------------- */
 .bold {
   font-weight: bold;
 }
 
+/* -----------------------APPARENCE CARTES PRODUITS------------------------- */
 #containerFormulaire {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/*.cardIndex:hover{
-    transform: scale(1.1);
-    transition: transform 1s;
-}*/
 .card-footer:hover {
   background-color: #dcf1f5;
 }
 
+/* -----------------------CHAMPS DE SELECTION------------------------- */
 .form-control {
   background-color: #dcf1f5;
 }
