--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,10 +15,27 @@ body {
     width: 100%;
     height: 100vh;
 }
+ /* -----------------------BARRE DE NAVIGATION------------------------ */
+
+.navbar-brand{
+    margin-left: 1em;
+}
+
+.navbar-toggler{
+    margin-right: 1em;
+}
+
+.navbar-nav > li {
+    margin-left: 1em;
+}
+
+ /* -----------------------TEXTES EN GRAS------------------------- */
 
 .bold{
     font-weight: bold;
 }
+
+ /* -----------------------APPARENCE CARTES PRODUITS------------------------- */
 
 #containerFormulaire{
     display: flex;
@@ -26,14 +43,11 @@ body {
     align-items: center;
 }
 
-/*.cardIndex:hover{
-    transform: scale(1.1);
-    transition: transform 1s;
-}*/
-
 .card-footer:hover{
     background-color: $background-color;
 }
+
+ /* -----------------------CHAMPS DE SELECTION------------------------- */
 
 .form-control{
     background-color: $background-color;
