finalisation accessibilité, indentation

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,10 +29,14 @@ body {
     margin-left: 1em;
 }
 
- /* -----------------------TEXTES EN GRAS------------------------- */
+ /* -----------------------MODIFS DE TEXTES------------------------- */
 
 .bold{
     font-weight: bold;
+}
+
+#totalCost{
+    font-size: 1.5em;
 }
 
  /* -----------------------APPARENCE CARTES PRODUITS------------------------- */
