--- a/css/style.css
+++ b/css/style.css
@@ -10855,9 +10855,13 @@ body {
   margin-left: 1em;
 }
 
-/* -----------------------TEXTES EN GRAS------------------------- */
+/* -----------------------MODIFS DE TEXTES------------------------- */
 .bold {
   font-weight: bold;
+}
+
+#totalCost {
+  font-size: 1.5em;
 }
 
 /* -----------------------APPARENCE CARTES PRODUITS------------------------- */
